tests/lang/compile_fail/ownership_self_mutate_error.expo
struct Config
  enabled: Bool

  fn toggle(self)
    self.enabled = not self.enabled
  end
end

fn main
  c = Config{enabled: true}
  print(c.enabled)
end
